# icon-bridge

./: .all-contributorsrc  .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  WORKSPACE  bridge.sh  build.sh  codecov.yml  go.mod  go.sum  repositories.bzl
cmd/iconbridge/: BUILD.bazel  config.json  example.config.json  keystore.json  main.go
cmd/iconbridge/chain/: BUILD.bazel  error.go  types.go
cmd/iconbridge/chain/algo/: a2i_test.go  abi.go  bmc.go  bmc_abi.go  client.go  client_test.go  contract_deployer.go  contracts  encoding.go  helpers.go  link_operations.go  receiver.go  receiver_test.go  register_relay.go  sender.go  sender_test.go  services.go  teal  test_utilities.go  types.go
cmd/iconbridge/chain/algo/bmc/: approval.teal  contract.json
cmd/iconbridge/chain/bsc/: BUILD.bazel  bmc_abigen.go  client.go  receiver.go  receiver_test.go  register_relay.go  sender.go  sender_test.go  type.go  verifier.go
cmd/iconbridge/chain/bsc/mocks/: IClient.go  IVerifier.go
cmd/iconbridge/chain/bsc/types/: types.go
cmd/iconbridge/chain/common/eth/: eth_verifier.go
cmd/iconbridge/chain/common/substrate-eth/: sub_eth_verifier.go
cmd/iconbridge/chain/hmny/: BUILD.bazel  client.go  client_test.go  receiver.go  receiver_core.go  receiver_test.go  register_relay.go  sender.go  sender_test.go  types.go  verifier.go
cmd/iconbridge/chain/icon/: BUILD.bazel  client.go  client_test.go  error.go  helper.go  receiver.go  receiver_core.go  receiver_test.go  register_relay.go  sender.go  sender_test.go  types.go  verifier.go  verifier_test.go
cmd/iconbridge/chain/icon/mocks/: IClient.go  IVerifier.go
cmd/iconbridge/chain/icon/types/: BUILD.bazel  types.go
cmd/iconbridge/chain/near/: BUILD.bazel  api.go  client.go  client_test.go  mock_api.go  receiver.go  receiver_test.go  register_relay.go  sender.go  sender_test.go  verifier.go  verifier_test.go
cmd/iconbridge/chain/near/errors/: BUILD.bazel  base.go  block_notification_errors.go  rpc_error.go  transaction_errors.go
cmd/iconbridge/chain/near/testdata/: compute_block_hash.go  create_transaction.go  get_block.go  get_block_header.go  get_block_proof.go  get_bmc_relay_method_transaction.go  get_bmc_status.go  get_receipt_proof.go  get_transaction_result.go  monitor_block_height.go  monitor_receiver_block.go  monitor_sender_block.go  send_transaction.go  send_transaction_async.go  tests.go
cmd/iconbridge/chain/near/tests/: compute_block_hash.go  create_transaction.go  get_balance.go  get_block.go  get_block_header.go  get_block_proof.go  get_bmc_relay_method_transaction.go  get_bmc_status.go  get_events.go  get_nonce.go  get_receipt_proof.go  get_transaction_result.go  monitor_block_height.go  monitor_receiver_block.go  monitor_sender_block.go  receiver_receive_blocks.go  receiver_subscribe.go  relay_tx_receipt.go  relay_tx_send.go  send_transaction.go  sender_segment.go  tests.go  verifier_validate_header.go
cmd/iconbridge/chain/near/types/: BUILD.bazel  access_key.go  account.go  approval_message.go  block.go  block_notification.go  block_producer.go  bmc_status.go  call_function.go  chain_status.go  chunk.go  common.go  header.go  receiver_options.go  sender_options.go  transaction.go
cmd/iconbridge/chain/snow/: bmc_abigen.go  client.go  receiver.go  receiver_test.go  register_relay.go  sender.go  type.go  verifier.go
cmd/iconbridge/chain/substrate-eth/: BUILD.bazel  bmc_abigen.go  client.go  receiver.go  receiver_test.go  register_relay.go  rx_test.go  sender.go  type.go  verifier.go
cmd/iconbridge/chain/substrate-eth/abi/: bmc_abigen.go
cmd/iconbridge/chain/substrate-eth/mocks/: IClient.go
cmd/iconbridge/chain/substrate-eth/types/: BUILD.bazel  types.go
cmd/iconbridge/chain/tezos/: client.go  receiver.go  register_relay.go  sender.go  verifier.go
cmd/iconbridge/chain/tezos/types/: types.go
cmd/iconbridge/common/chainutils/: segment.go  segment_test.go
cmd/iconbridge/relay/: BUILD.bazel  config.go  multi_relay.go  relay.go
cmd/iconbridge/stat/: BUILD.bazel  config.go  stat.go  stat_test.go  sys_extract.go
cmd/iconvalidators/: BUILD.bazel  votes_test.go
common/wallet/: BUILD.bazel  encrypted.go  keystore.go  keystore_near.go  utils.go  wallet.go  wallet_avm.go  wallet_near.go  wallet_tezos.go
javascore/bmc/: BUILD.bazel  README.md  build.gradle
javascore/bsr/: BUILD.bazel  build.gradle
javascore/bts/: BUILD.bazel  README.md  build.gradle
javascore/irc2Tradeable/: BUILD.bazel  build.gradle
rust/near/: BUILD  Cargo.toml  compile.sh  j.json  key_secret  keystore.json
rust/near/bmc/: BUILD  Cargo.toml  compile.sh
rust/near/bmc/src/: assertion.rs  estimate.rs  internal_service.rs  lib.rs  link_management.rs  messaging.rs  owner_management.rs  relay_management.rs  route_management.rs  service_management.rs  utils.rs
rust/near/bmc/src/types/: events.rs  mod.rs  proof.rs  receipt_proof.rs  receipts.rs  relay_message.rs
rust/near/bmc/tests/: accounts.rs  test_link_management.rs  test_messaging.rs  test_ownership_management.rs  test_relay_management.rs  test_route_management.rs  test_service_management.rs
rust/near/bmv/icon/src/: block_validation.rs
rust/near/bmv/icon/tests/: test_messaging.rs
rust/near/bsh/bts/: BUILD  Cargo.toml  compile.sh  coverage.sh
rust/near/bsh/bts/src/: assertion.rs  (+12 more)
rust/near/bsh/nativecoin/: Cargo.toml
rust/near/bsh/nep141/: Cargo.toml  compile.sh
rust/near/cargo/: BUILD
rust/near/cli/: BUILD  defs.bzl
rust/near/libraries/: BUILD  Cargo.toml
rust/near/libraries/src/: lib.rs
rust/near/res/: BMC_CONTRACT.wasm  BTS_CONTRACT.wasm  NEP141_CONTRACT.wasm
rust/near/test-helper/: Cargo.toml
rust/near/test-helper/src/: lib.rs
rust/near/tests/: test_handle_relay_message.rs  test_manage_bsh_services.rs  test_manage_links.rs  test_manage_owner_accounts.rs  test_manage_relays.rs  test_manage_routes.rs  test_manage_tokens.rs  test_token_transfers.rs
rust/near/tests/steps/: account_management.rs  link_management.rs  messaging.rs  mod.rs  service_management.rs  setup.rs  token_bsh_management.rs  token_management.rs
(+1414 files in other folders)
