load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

package(default_visibility = ["//visibility:public"])

go_library(
    name = "iconbridge_lib",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/icon-project/iconbridge/cmd/iconbridge",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/iconbridge/chain",
        "//common/cli",
        "//common/crypto",
        "//common/errors",
        "//common/log",
        "//common/wallet",
        "@com_github_getsentry_sentry_go//:go_default_library",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "iconbridge",
    embed = [":iconbridge_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "iconbridge_linux",
    embed = [":iconbridge_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "iconbridge_image",
    base = "@golang_base//image",
    entrypoint = ["/iconbridge_linux"],
    files = [":iconbridge_linux"],
)
