load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "iconvalidators_lib",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/icon-project/iconbridge/cmd/iconbridge",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_icon_project_goloop//client:go_default_library",
        "@com_github_icon_project_goloop//common:go_default_library",
        "@com_github_icon_project_goloop//common/codec:go_default_library",
        "@com_github_icon_project_goloop//common/crypto:go_default_library",
        "@com_github_icon_project_goloop//server/jsonrpc:go_default_library",
        "@com_github_icon_project_goloop//server/v3:go_default_library",
    ],
)

go_binary(
    name = "iconvalidators",
    embed = [":iconvalidators_lib"],
    visibility = ["//visibility:public"],
)
