package(default_visibility = ["//visibility:public"])

genrule(
    name = "javascore",
    outs = [
        "bts-0.1.0-optimized.jar",
    ],
    cmd = "gradle -q -b $$PWD/external/javascore/bts/build.gradle optimizedJar; cp $$PWD/external/javascore/bts/build/libs/bts-0.1.0-optimized.jar $@",
    executable = True,
    local = True,
    tools = [
        "@javascore//bsr:javascore",
    ],
)