package(default_visibility = ["//visibility:public"])

genrule(
    name = "javascore",
    outs = ["irc2Tradeable-0.1.0-optimized.jar"],
    cmd = "gradle -q -b $$PWD/external/javascore/irc2Tradeable/build.gradle optimizedJar; cp $$PWD/external/javascore/irc2Tradeable/build/libs/irc2Tradeable-0.1.0-optimized.jar $@",
    executable = True,
    local = True,
)

genrule(
    name = "javascore_serialized",
    outs = ["javascore_serialized.out"],
    srcs = [":javascore"],
    cmd = "echo $$($$(xxd -p $(location :javascore) | tr -d '\n') | jq -r .) > $@",
    executable = True,
    local = True,
)

