[package]
name = "near-btp"
version = "0.1.0"
authors = ["Icon Foundation<foo@icon.foundation>"]
edition = "2018"

[workspace]
members = [
    "bmc",
    "bsh/bts",
    "bsh/nep141",
    "libraries",
    "test-helper"
]

[features]
integration-tests = []
testable = []

[dev-dependencies]
libraries = { path = "./libraries" }
test-helper = { path = "./test-helper" }
lazy_static = "1.4.0"
kitten = "^0.2.0"
workspaces = "0.6.0"
serde_json = "1"
hex = "0.4.3"
tokio = { version = "1.24.2", features = ["macros"] }
near-sdk = "4.1.0-pre.3"

[profile.release]
lto = true
codegen-units = 1
overflow-checks = true
# Tell `rustc` to optimize for small code size.
opt-level = "z"
debug = false
panic = "abort"
