[package]
name = "libraries"
version = "0.1.0"
description = "Data Types for BSH, BMC, and BMV Contracts"
authors = ["Icon Foundation<foo@icon.foundation>"]
edition = "2018"

[dependencies]
btp-common = { path="../../btp-common" }
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1" }
near-sdk = "4.1.0-pre.3"
near-contract-standards = "4.1.0-pre.3"
rustc-hex = { version = "2.0.1", default-features = false }
rlp-derive = "0.1.0"