load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "icon",
    srcs = [
        "client.go",
        "error.go",
        "helper.go",
        "receiver.go",
        "register_relay.go",
        "sender.go",
        "serialize.go",
        "verifier.go",
    ],
    importpath = "github.com/icon-project/icon-bridge/cmd/iconbridge/chain/icon",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/iconbridge/chain",
        "//cmd/iconbridge/chain/icon/types",
        "//cmd/iconbridge/relay",
        "//common",
        "//common/codec",
        "//common/crypto",
        "//common/errors",
        "//common/intconv",
        "//common/jsonrpc",
        "//common/log",
        "//common/wallet",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_icon_project_goloop//common:go_default_library",
        "@com_github_icon_project_goloop//common/codec:go_default_library",
        "@com_github_icon_project_goloop//common/db:go_default_library",
        "@com_github_icon_project_goloop//common/trie/ompt:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "icon_test",
    srcs = [
        "pra_bmv_test.go",
        "receiver_test.go",
        "sender_test.go",
    ],
    embed = [":icon"],
    deps = [
        "//chain",
        "//common/codec",
        "//common/crypto",
        "//common/log",
        "//common/wallet",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
