load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "near",
    srcs = [
        "api.go",
        "client.go",
        "receiver.go",
        "register_relay.go",
        "sender.go",
    ],
    importpath = "github.com/icon-project/icon-bridge/cmd/iconbridge/chain/near",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/iconbridge/chain",
        "//cmd/iconbridge/chain/near/errors",
        "//cmd/iconbridge/chain/near/types",
        "//cmd/iconbridge/relay",
        "//common/codec",
        "//common/jsonrpc",
        "//common/log",
        "//common/wallet",
        "@com_github_btcsuite_btcutil//base58:go_default_library",
        "@com_github_near_borsh_go//:go_default_library",
        "@com_github_reactivex_rxgo_v2//:rxgo",
    ],
)
