[package]
name = "nep141-service"
version = "0.1.0"
authors = ["Icon Foundation<foo@icon.foundation>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "NEP141_CONTRACT"
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
near-contract-standards = "4.1.0-pre.3"
