load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = [
        "block.go",
        "block_notification.go",
        "block_producer.go",
        "bmc_status.go",
        "bmv_status.go",
        "chain_status.go",
        "chunk.go",
        "common.go",
        "contract_state_change.go",
        "header.go",
        "nonce.go",
        "receipt_proof.go",
        "transaction.go",
        "account.go"
    ],
    importpath = "github.com/icon-project/icon-bridge/cmd/iconbridge/chain/near/types",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/iconbridge/chain",
        "//common/codec",
        "//common/wallet",
        "@com_github_btcsuite_btcutil//base58:go_default_library",
        "@com_github_near_borsh_go//:go_default_library",
        "@com_github_shopspring_decimal//:go_default_library",
    ],
)
